# atlas

./: .gitignore  predict.py  pyproject.toml  requirements.txt  setup.py  train.py  visualize_predictions.py
atlas/: display_data.py  evaluate.py  predict.py  run_configs.toml  train.py
atlas/model_managers/: _abstract_model_manager.py  snunet_model_manager.py
atlas/scripts/: display_change_detection.py
atlas/utils/: display_utils.py
configs/: predict_config.yaml  train_config.yaml  visualize_config.yaml
logs/: log.txt
src/: train.py
src/data/: dataloader.py  dataset.py  transforms.py
src/models/: enhanced_sunet.py  snunet.py  sunet.py
src/models/components/: attention.py  fpn.py  transformer.py
src/training/: callbacks.py  cd_losses.py  losses.py  optimizer.py  trainer.py
src/utils/: config.py  device_utils.py  metrics.py
