[tool.poetry]
name = "atlas"
version = "0.1.0"
description = ""
authors = ["Zachary Walls <77221529+zacwallsie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
